# vxworks-emulation-layer

./: .gitmodules  CMakeLists.txt  README.md
include/: helpers.h  msgQLib.h  sysLib.h  vxworks.h  wdLib.h
include/cpp/: Semaphore.h  Timestamp.h  VXConcurrentQueue.h  WatchDog.h
src/: helpers.c  msgQLib.c  sysLib.c  taskLib.c  tickLib.c  wdLib.c
src/cpp/: Semaphore.cpp  VXConcurrentQueue.cpp  WatchDog.cpp
